# gentext-app

./: README.md  pyproject.toml
