[project]
name = "gentext-app"
version = "0.1.0"
description = "FastAPI Dockerized NLP application with spaCy embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-md",
    "fastapi[standard]>=0.136.3",
    "pydantic>=2.13.4",
    "spacy>=3.8.14",
    "uvicorn>=0.48.0",
]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
